MDEV-34134: Assertion failure in online_alter_log_row upon replicating REPAIR on mysql.gtid_slave_pos

The online alter code expects all columns set in table->read_set during the
online alter. But code to ensure this was forgotten to be added in
rpl_slave_state::gtid_delete_pending() (background cleanup job of table
mysql.gtid_slave_pos).

(Another, more general problem still remains, see MDEV-37573).

Signed-off-by: Kristian Nielsen <knielsen@knielsen-hq.org>